rs/macros/tests/ui/gprogram_fails_for_service_with_empty_route.stderr
error: `route` attribute requires a literal with a valid Rust identifier: unexpected end of input, expected identifier
 --> tests/ui/gprogram_fails_for_service_with_empty_route.rs:9:13
  |
9 |     #[route("")]
  |             ^^
